// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates typings for module export-from-js 1`] = `
"/// <reference types=\\"react\\" />
declare module 'export-from-js' {
    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module export-from-jsx 1`] = `
"/// <reference types=\\"react\\" />
declare module 'export-from-jsx' {
    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module stage-2-syntax 1`] = `
"declare module 'stage-2-syntax' {
    import {PureComponent} from 'react';

    export interface MyComponentProps {
        foo: string;
    }

    export class MyComponent extends PureComponent<MyComponentProps, any> {
        render(): JSX.Element;

    }

}

"
`;

exports[`generates typings for module with-css-modules 1`] = `
"/// <reference types=\\"react\\" />
declare module 'with-css-modules' {
    export interface ComponentProps {
        foo: string;
    }

    export function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-dependency 1`] = `
"/// <reference types=\\"react\\" />
declare module 'with-dependency' {
    export interface TestDependencyProps {
        foo: string;
    }

    export function TestDependency(props: TestDependencyProps): JSX.Element;

    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-es5-dependency 1`] = `
"/// <reference types=\\"react\\" />
declare module 'with-es5-dependency' {
    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-json-dependency 1`] = `
"/// <reference types=\\"react\\" />
declare module 'with-json-dependency' {
    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;

exports[`generates typings for module with-node-builtin-dependency 1`] = `
"/// <reference types=\\"react\\" />
declare module 'with-node-builtin-dependency' {
    export interface ComponentProps {
        foo: string;
    }

    export default function Component(props: ComponentProps): JSX.Element;

}

"
`;
